--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/* styles/globals.css */
+
+ul {
+    list-style: disc inside;
+    /* Add any other default styling you might need */
+  }
+  
