--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -3,10 +3,16 @@
 @tailwind utilities;
 
 
-/* styles/globals.css */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
+body {
+  font-family: 'Inter', sans-serif;
+}
+div{
+  font-family: 'Inter', sans-serif;
+}
 
 ul {
     list-style: disc inside;
-    /* Add any other default styling you might need */
   }
   
